# internal/config/endpoints.go
@@ -1,17 +1,30 @@
 package config
 
 var (
-	SEND_TEXT_PUSH_NOTIFICATION_HEAD = "/push"
-	SEND_TEXT_PUSH_NOTIFICATION = "/text"
-	SEND_TEXT_AND_IMAGE_PUSH_NOTIFICATION = "/text-image"
-
-	SEGMENTATION  = "/segment"
-	SEGMENT_LIST_ALL  = "/all"
-	SEGMENT_CREATE = "/create"
-	SEGMENT_DELETE = "/delete"
-	SEGMENT_UPDATE = "/update"
-
 	WEBSCOKET_CHANNEL = "/ws/announcement"
 
 	SWAGGER_DOCS = "/swagger/*any"
+)
+
+var (
+	SEND_TEXT_PUSH_NOTIFICATION_HEAD      = "/push"
+	SEND_TEXT_PUSH_NOTIFICATION           = "/text"
+	SEND_TEXT_AND_IMAGE_PUSH_NOTIFICATION = "/text-image"
+)
+
+var (
+	SEGMENTATION     = "/segment"
+	SEGMENT_LIST_ALL = "/all"
+	SEGMENT_CREATE   = "/create"
+	SEGMENT_DELETE   = "/delete"
+	SEGMENT_UPDATE   = "/update"
+)
+
+var (
+	ANNOUNCEMENT        = "/announcement"
+	ANNOUNCEMENT_CREATE = "/create"
+	ANNOUNCEMENT_DELETE = "/delete"
+	ANNOUNCEMENT_LATEST   = "/latest"
+	ANNOUNCEMENT_UPDATE = "/update"
+	ANNOUNCEMENT_LIST_ALL = "/all"
 )
