# internal/structure/priority.go
@@ -1,0 +1,10 @@
+package structure
+
+type Priority string
+
+var (
+	PriorityHigh   Priority = "high"
+	PriorityNormal Priority = "normal"
+	PriorityLow    Priority = "low"
+	PriorityNone   Priority = "none"
+)
